(feat):postApi creation successful

--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -63,12 +63,12 @@ nav {
       margin: 20px;
     }
 
-    .user{
+    .user {
       display: flex;
       align-items: center;
       font-weight: bold;
 
-      img{
+      img {
         width: 40px;
         height: 40px;
         border-radius: 50%;
@@ -76,20 +76,20 @@ nav {
         margin-right: 20px;
       }
 
-      span{
-        @include sm{
+      span {
+        @include sm {
           display: none;
         }
       }
 
-      .profile{
+      .profile {
         padding: 12px 24px;
         background-color: #fece51;
         cursor: pointer;
         border: none;
         position: relative;
-        
-        .notification{
+
+        .notification {
           position: absolute;
           top: -8px;
           right: -8px;
@@ -102,12 +102,40 @@ nav {
           align-items: center;
           justify-content: center;
         }
-
       }
     }
 
-    .register {
-      background-color: #fece51;
+    .nouser {
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+      gap: 20px; /* Keeps spacing similar to .user */
+
+      a {
+        padding: 12px 24px;
+        background-color: transparent;
+        color: black;
+        text-decoration: none;
+        border: 2px solid #fece51;
+        border-radius: 5px;
+        transition: all 0.3s ease;
+        font-weight: 600;
+
+        &:hover {
+          background-color: #fece51;
+          color: white;
+        }
+      }
+
+      .register {
+        background-color: #fece51;
+        color: white;
+        border: none;
+
+        &:hover {
+          background-color: darken(#fece51, 10%);
+        }
+      }
     }
 
     .menuIcon {
