--- a/client/src/routes/profilePage/profilePage.scss
+++ b/client/src/routes/profilePage/profilePage.scss
@@ -53,6 +53,14 @@
           gap: 20px;
         }
 
+        button{
+          width: 100px;
+          background-color:teal;
+          border: none;
+          color: white;
+          padding: 10px 20px;
+        }
+
         img{
           width: 40px;
           height: 40px;
